Fix the alignment if the icnos a bit

--- a/internal/static/css/twtxt.css
+++ b/internal/static/css/twtxt.css
@@ -1,3 +1,7 @@
+i[class*=icss-] {
+    margin: .2em .2em;
+}
+
 article p img {
     display: block;
 }
